--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-f
+<!doctype html>
+<html lang="en">
+<head>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	<meta charset="UTF-8" />
+	<title>Gabriel House</title>
+	<link rel="stylesheet" href="index.css">
+</head>
+<body>
+<canvas id="canvas" width="1496" height="488" />
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+
+	<script src="index.js"></script>
+	</body>
+
+</html>
